--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 MODEL="llama3"
 CRAWLER_VERSION="0.2.0"
+ELASTIC_VERSION="8.15.3"
+PLATFORM_FLAVOR="darwin-aarch64"
+ES_LOCAL_URL="http://localhost:9200"
+ES_LOCAL_PASSWORD="changeme"
