--- a/config/shared/crawler-es.yml
+++ b/config/shared/crawler-es.yml
@@ -1,9 +1,9 @@
 elasticsearch:
   host: http://host.docker.internal
-  port:
+  port: 9200
   username: elastic
   password: changeme
   pipeline: crawler-pipeline
   bulk_api:
-    max_items: 10
+    max_items: 5
 
